sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: ')' expected but ';' found.
      print(plusPetit(v, k-1);
                             ^